--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "psr/http-message": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0"
+    "phpunit/phpunit": "~5.0",
+    "guzzlehttp/psr7": "~1.3"
   },
   "autoload": {
     "psr-4": {
@@ -23,7 +24,7 @@
   },
   "autoload-dev": {
     "classmap": [
-      "tests/SoukiczTests"
+      "tests"
     ]
   }
 }
