--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "ext-imap": "*",
     "php": ">=5.6.0",
-    "psr/http-message": "~1.0"
+    "psr/http-message": "~1.0 || ~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0",
